{
  "version": 4,
  "terraform_version": "0.14.3",
  "serial": 188,
  "lineage": "4579a084-1057-2290-b9b4-f83cf2545bc5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-06710276dfb0237ee",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-163-90-16.compute-1.amazonaws.com",
            "public_ip": "54.163.90.16",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "appserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0be2609ba883822ec",
            "arn": "arn:aws:ec2:us-east-1:863697613521:instance/i-081c2f301b37f888b",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-081c2f301b37f888b",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "web-kp",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d904074c1deb78e3",
            "private_dns": "ip-10-0-3-7.ec2.internal",
            "private_ip": "10.0.3.7",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0502fb2bb7b8f5511",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dfc79f4507b2187c",
            "tags": {
              "Name": "appserver-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02d28012ae551f6de"
            ]
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.private-route",
            "aws_security_group.app-sg",
            "aws_security_group.web-sg",
            "aws_subnet.private-sn",
            "aws_subnet.public-sn",
            "aws_vpc.custome-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0be2609ba883822ec",
            "arn": "arn:aws:ec2:us-east-1:863697613521:instance/i-0bcef34bbd4edf30b",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bcef34bbd4edf30b",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "web-kp",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0248864cc9b2c599b",
            "private_dns": "ip-10-0-4-98.ec2.internal",
            "private_ip": "10.0.4.98",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-090f86bd589ce420d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0079536e8e0b6e39a",
            "tags": {
              "Name": "appserver-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02d28012ae551f6de"
            ]
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.private-route",
            "aws_security_group.app-sg",
            "aws_security_group.web-sg",
            "aws_subnet.private-sn",
            "aws_subnet.public-sn",
            "aws_vpc.custome-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0be2609ba883822ec",
            "arn": "arn:aws:ec2:us-east-1:863697613521:instance/i-020e92264c614edb9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-020e92264c614edb9",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "web-kp",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01954c130d586c53d",
            "private_dns": "ip-10-0-1-117.ec2.internal",
            "private_ip": "10.0.1.117",
            "public_dns": "ec2-3-88-13-212.compute-1.amazonaws.com",
            "public_ip": "3.88.13.212",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00dca711a42ab1bf6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04e611003de0ffba2",
            "tags": {
              "Name": "webserver-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06f69f7b9ea419e03"
            ]
          },
          "dependencies": [
            "aws_security_group.web-sg",
            "aws_subnet.public-sn",
            "aws_vpc.custome-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0be2609ba883822ec",
            "arn": "arn:aws:ec2:us-east-1:863697613521:instance/i-09f469f8bb4a5445f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09f469f8bb4a5445f",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "web-kp",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0358746d27fe36f69",
            "private_dns": "ip-10-0-2-138.ec2.internal",
            "private_ip": "10.0.2.138",
            "public_dns": "ec2-54-175-55-29.compute-1.amazonaws.com",
            "public_ip": "54.175.55.29",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02cd04752493e3d03",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c989b33cd42c2248",
            "tags": {
              "Name": "webserver-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06f69f7b9ea419e03"
            ]
          },
          "dependencies": [
            "aws_security_group.web-sg",
            "aws_subnet.public-sn",
            "aws_vpc.custome-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:863697613521:internet-gateway/igw-03b3cb67a395b2bda",
            "id": "igw-03b3cb67a395b2bda",
            "owner_id": "863697613521",
            "tags": {
              "Name": "TF-IG"
            },
            "vpc_id": "vpc-0a62fbfe557cc8de1"
          },
          "dependencies": [
            "aws_vpc.custome-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06710276dfb0237ee",
            "id": "nat-0d23d26815896fc75",
            "network_interface_id": "eni-0e0e85a299d8455a3",
            "private_ip": "10.0.1.89",
            "public_ip": "54.163.90.16",
            "subnet_id": "subnet-04e611003de0ffba2",
            "tags": {
              "Name": "gw NAT"
            }
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_subnet.public-sn",
            "aws_vpc.custome-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c9fc1a5113d00206",
            "owner_id": "863697613521",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0d23d26815896fc75",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private route table"
            },
            "vpc_id": "vpc-0a62fbfe557cc8de1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_nat_gateway.nat-gw",
            "aws_subnet.public-sn",
            "aws_vpc.custome-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0581654a585fff6ad",
            "owner_id": "863697613521",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03b3cb67a395b2bda",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public route table"
            },
            "vpc_id": "vpc-0a62fbfe557cc8de1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.custome-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bfcfe16884c87c73",
            "route_table_id": "rtb-0c9fc1a5113d00206",
            "subnet_id": "subnet-0dfc79f4507b2187c"
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.private-route",
            "aws_subnet.private-sn",
            "aws_subnet.public-sn",
            "aws_vpc.custome-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-001876fb9a32d513f",
            "route_table_id": "rtb-0c9fc1a5113d00206",
            "subnet_id": "subnet-0079536e8e0b6e39a"
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.private-route",
            "aws_subnet.private-sn",
            "aws_subnet.public-sn",
            "aws_vpc.custome-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd050c37f26a7b77",
            "route_table_id": "rtb-0581654a585fff6ad",
            "subnet_id": "subnet-04e611003de0ffba2"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public-route",
            "aws_subnet.public-sn",
            "aws_vpc.custome-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd7291b98100d11a",
            "route_table_id": "rtb-0581654a585fff6ad",
            "subnet_id": "subnet-0c989b33cd42c2248"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public-route",
            "aws_subnet.public-sn",
            "aws_vpc.custome-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:863697613521:security-group/sg-02d28012ae551f6de",
            "description": "Allow  ssh and http 8080",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02d28012ae551f6de",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from web",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06f69f7b9ea419e03"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "ssh from web",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06f69f7b9ea419e03"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "app-sg",
            "name_prefix": "",
            "owner_id": "863697613521",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "appserver-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a62fbfe557cc8de1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web-sg",
            "aws_vpc.custome-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:863697613521:security-group/sg-06f69f7b9ea419e03",
            "description": "Allow  ssh and http 80",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06f69f7b9ea419e03",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from web",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh from web",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "web-sg",
            "name_prefix": "",
            "owner_id": "863697613521",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "webserver-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a62fbfe557cc8de1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.custome-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-sn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:863697613521:subnet/subnet-0dfc79f4507b2187c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0dfc79f4507b2187c",
            "map_public_ip_on_launch": false,
            "owner_id": "863697613521",
            "tags": {
              "Name": "private-sn-1"
            },
            "vpc_id": "vpc-0a62fbfe557cc8de1"
          },
          "dependencies": [
            "aws_vpc.custome-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:863697613521:subnet/subnet-0079536e8e0b6e39a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0079536e8e0b6e39a",
            "map_public_ip_on_launch": false,
            "owner_id": "863697613521",
            "tags": {
              "Name": "private-sn-2"
            },
            "vpc_id": "vpc-0a62fbfe557cc8de1"
          },
          "dependencies": [
            "aws_vpc.custome-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-sn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:863697613521:subnet/subnet-04e611003de0ffba2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-04e611003de0ffba2",
            "map_public_ip_on_launch": true,
            "owner_id": "863697613521",
            "tags": {
              "Name": "public-sn-1"
            },
            "vpc_id": "vpc-0a62fbfe557cc8de1"
          },
          "dependencies": [
            "aws_vpc.custome-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:863697613521:subnet/subnet-0c989b33cd42c2248",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0c989b33cd42c2248",
            "map_public_ip_on_launch": true,
            "owner_id": "863697613521",
            "tags": {
              "Name": "public-sn-2"
            },
            "vpc_id": "vpc-0a62fbfe557cc8de1"
          },
          "dependencies": [
            "aws_vpc.custome-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "custome-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:863697613521:vpc/vpc-0a62fbfe557cc8de1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02e3f2e23e6089ded",
            "default_route_table_id": "rtb-0dfb9f307ffb8f065",
            "default_security_group_id": "sg-0f659fe8949aa2c2a",
            "dhcp_options_id": "dopt-3712574d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0a62fbfe557cc8de1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0dfb9f307ffb8f065",
            "owner_id": "863697613521",
            "tags": {
              "Name": "Custom_VPC"
            }
          }
        }
      ]
    }
  ]
}